# ohtello_backend

./: .env  Cargo.toml
db/: Cargo.toml
db/migrations/2024-05-11-035738_create_users/: up.sql
db/migrations/2024-05-11-040921_create_games/: up.sql
db/migrations/2024-05-11-044748_create_moves/: up.sql
db/migrations/2024-05-11-045300_create_histories/: up.sql
db/src/: error.rs  game.rs  history.rs  lib.rs  models.rs  move.rs  schema.rs  user.rs
db/tests/: integration_test.rs
game_logic/: Cargo.toml
game_logic/src/: state.rs
