[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel={version="2.1.0", features=["postgres", "chrono"]}
dotenvy="0.15.0"
thiserror = "1.0.60"
chrono = {version = "0.4.19", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"